집계파이프라인 완성